# hexasolve

./: .gitignore  CMakeLists.txt
src/: dice.h  main.cpp  solve.cpp  solve.h  types.h  world.cpp  world.h
